Issue #22588: Fix typo in _testcapi.test_incref_decref_API()